--- a/Beef's Stationeers Gameplay Fixes.csproj
+++ b/Beef's Stationeers Gameplay Fixes.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="libs\**" />
+    <EmbeddedResource Remove="libs\**" />
+    <None Remove="libs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\Stationeers-Creative-Freedom\Stationeers Basic Bepinex plugin\libs\0Harmony.dll</HintPath>
     </Reference>
